added a Team table and made a swagger for it
